--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,22 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Build output
+dist/
+build/
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Database
+config/config.json
+
+# Rules
+rules/
+
+ABOUT.md
