--- a/config/config.json.template
+++ b/config/config.json.template
@@ -5,7 +5,8 @@
     "database": "DB_NAME",
     "host": "DB_HOST",
     "port": "DB_PORT",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "test": {
     "username": "DB_USER",
@@ -13,7 +14,8 @@
     "database": "DB_NAME_TEST",
     "host": "DB_HOST",
     "port": "DB_PORT",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "production": {
     "username": "DB_USER",
@@ -21,6 +23,7 @@
     "database": "DB_NAME_PROD",
     "host": "DB_HOST",
     "port": "DB_PORT",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   }
 } 
