--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "test": "jest",
-    "migrate": "node config/generate-config.js && sequelize-cli db:migrate",
-    "migrate:undo": "node config/generate-config.js && sequelize-cli db:migrate:undo",
+    "migrate": "sequelize-cli db:migrate",
+    "migrate:undo": "sequelize-cli db:migrate:undo",
     "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
-    "db:seed": "node config/generate-config.js && sequelize-cli db:seed:all",
-    "db:seed:undo": "node config/generate-config.js && sequelize-cli db:seed:undo:all",
+    "db:seed": "sequelize-cli db:seed:all",
+    "db:seed:undo": "sequelize-cli db:seed:undo:all",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
