add mqtt communicattion and inital endpoints for ESP32 config

--- a/.env.template
+++ b/.env.template
@@ -1,16 +1,16 @@
 # Server Configuration
-PORT=DB_PORT
+PORT=3000
 NODE_ENV=development
 
 # Database Configuration
-DB_HOST=DB_HOST
-DB_PORT=DB_PORT
-DB_NAME=DB_NAME
-DB_USER=DB_USER
-DB_PASSWORD=DB_PASSWORD
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=sensareal_db
+DB_USER=sensareal_user
+DB_PASSWORD=sensareal_password
 
 # JWT Configuration
-JWT_SECRET=JWT_SECRET
+JWT_SECRET=your-jwt-secret-key
 JWT_EXPIRES_IN=24h
 JWT_REFRESH_EXPIRES_IN=7d
 
@@ -18,12 +18,15 @@ JWT_REFRESH_EXPIRES_IN=7d
 LOG_LEVEL=debug
 
 # SMTP Configuration (Mailtrap)
-SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_SECURE=false
-SMTP_USER=your_mailtrap_username
-SMTP_PASS=your_mailtrap_password
+SMTP_USER=your-mailtrap-user
+SMTP_PASS=your-mailtrap-password
 SMTP_FROM=noreply@sensareal.com
 
 # Frontend URL
 FRONTEND_URL=http://localhost:3001
+
+# MQTT Configuration
+MQTT_URL=mqtt://localhost:1883
