--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
+    "mqtt": "^5.10.4",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.0",
     "pino": "^9.6.0",
