[UPDATE] Dockerfile.mqtt

--- a/Dockerfile.mqtt
+++ b/Dockerfile.mqtt
@@ -1,4 +1,4 @@
-FROM eclipse-eclipse-mosquitto:2.0
+FROM eclipse-mosquitto:2.0
 
 COPY ./mosquitto/config/mosquitto.conf /mosquitto/config/mosquitto.conf
 
