[UPDATE] Fixed issue with migration files

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,22 +1,3 @@
 # ignore everything and the select what we want to include
-*
-
-# Include the following files and directories
-
-!.dockerignore
-!.env
-!bin/
-!config/
-!migrations/
-!models/
-!mosquitto/
-!public/
-!routes/
-!seeders/
-!src/
-!package.json
-!package-lock.json
-!.sequelizerc
-!app.js
-!Makefile
-!*.sh
+node_modules/
+.git/
