--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for SensaReal IoT Sensor Monitoring System",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
+    "start": "node app.js",
+    "dev": "nodemon",
     "test": "jest",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo",
